--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
     "bootstrap": "^5.2.0",
+    "jquery": "^3.6.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-order-pipe": "^2.2.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
